--- a/app/src/main/res/layout/calendar_main.xml
+++ b/app/src/main/res/layout/calendar_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.SwipeRefreshLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ptr_layout"
@@ -27,4 +27,4 @@
         app:todayBackgroundColor="@color/blue_grey_50"
         app:headerColumnBackground="@color/grey_white_1000"/>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+</RelativeLayout>
