--- a/app/src/main/res/layout/courses_detail_row_grade.xml
+++ b/app/src/main/res/layout/courses_detail_row_grade.xml
@@ -1,59 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.balysv.materialripple.MaterialRippleLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:rippleOverlay="false"
+    app:rippleColor="@color/grey_400"
+    app:rippleAlpha="0.2"
+    app:rippleHover="true"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_white_1000"
     android:paddingTop="20dp"
     android:paddingBottom="20dp">
 
-    <TextView
-        android:id="@+id/nameTextView"
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="0dp"
-        android:maxLines="1"
-        android:textSize="16sp"
-        android:text="Prueba 1"
-        android:textColor="@color/text_dark"
-        android:ellipsize="end"/>
+        android:layout_height="fill_parent">
 
-    <TextView
-        android:id="@+id/gradeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:maxLines="1"
-        android:textSize="14sp"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="right"
-        android:text="7.0"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:background="@drawable/sport_reserved_text"
-        android:textColor="@android:color/white"
-        android:ellipsize="end"/>
+        <TextView
+            android:id="@+id/nameTextView"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="0dp"
+            android:maxLines="1"
+            android:textSize="16sp"
+            android:text="Prueba 1"
+            android:textColor="@color/text_dark"
+            android:ellipsize="end"/>
 
-    <TextView
-        android:id="@+id/dateTextView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="10dp"
-        android:maxLines="1"
-        android:textSize="14sp"
-        android:layout_below="@id/nameTextView"
-        android:text="01-04-2014 19:30:00"
-        android:textColor="@color/text_lighter"
-        android:ellipsize="end"/>
+        <TextView
+            android:id="@+id/gradeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="right"
+            android:text="7.0"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:background="@drawable/sport_reserved_text"
+            android:textColor="@android:color/white"
+            android:ellipsize="end"/>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/dateTextView"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="10dp"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:layout_below="@id/nameTextView"
+            android:text="01-04-2014 19:30:00"
+            android:textColor="@color/text_lighter"
+            android:ellipsize="end"/>
+
+    </RelativeLayout>
+
+</com.balysv.materialripple.MaterialRippleLayout>
