--- a/app/src/main/res/layout/messages_detail.xml
+++ b/app/src/main/res/layout/messages_detail.xml
@@ -17,12 +17,13 @@
         android:layout_height="wrap_content"
         android:layout_width="fill_parent" />
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/infoBackgroundView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:layout_below="@id/toolbar">
+        android:layout_below="@id/toolbar"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/fromTextView"
@@ -36,31 +37,42 @@
             android:ellipsize="end"/>
 
         <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:maxLines="3"
+            android:textSize="16sp"
+            android:text="Titulo"
+            android:textColor="@color/text_light"
+            android:ellipsize="end"/>
+
+        <TextView
             android:id="@+id/dateTextView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="5dp"
             android:maxLines="3"
             android:textSize="14sp"
             android:text="06/05/2014 | 14:46"
-            android:textColor="#666666"
+            android:textColor="@color/text_lighter"
             android:ellipsize="end"/>
 
-        </FrameLayout>
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/contentTextView"
+    <WebView
+        android:id="@+id/contentWebView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/infoBackgroundView"
         android:paddingTop="0dp"
-        android:paddingRight="16dp"
-        android:paddingLeft="16dp"
-        android:paddingBottom="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="8dp"
         android:maxLines="99999"
         android:textSize="16sp"
-        android:text="Se anuncia a los alumnos que se encuentran habilitados los nuevos lockers con el nuevo sistema de lector biometrico de retina."
         android:textColor="@android:color/black"
-        android:ellipsize="end"/>
+        android:ellipsize="end">
+        </WebView>
 
 </RelativeLayout>
