--- a/app/src/main/res/layout/messages_main.xml
+++ b/app/src/main/res/layout/messages_main.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ptr_layout"
     android:background="@color/grey_white_1000"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/itemsListView"
