--- a/app/src/main/res/layout/messages_row.xml
+++ b/app/src/main/res/layout/messages_row.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<com.balysv.materialripple.MaterialRippleLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:rippleOverlay="false"
+    app:rippleColor="@color/grey_400"
+    app:rippleAlpha="0.2"
+    app:rippleHover="true"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="20dp"
@@ -9,6 +14,10 @@
     android:paddingRight="16dp"
     android:paddingLeft="16dp">
 
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:focusable="false">
             <ImageView
                 android:id="@+id/navigationNextItemImageView"
                 android:layout_width="25dp"
@@ -62,11 +71,15 @@
                 android:layout_below="@id/fromTextView"
                 android:maxLines="3"
                 android:layout_marginTop="6dp"
+                android:minHeight="40dp"
                 android:textSize="15sp"
-                android:text="Se anuncia a los alumnos que se encuentran habilitados los nuevos lockers con el nuevo sistema de lector biometrico de retina."
+                android:text="Se anuncia a los alumnos"
                 android:textColor="@android:color/black"
                 android:ellipsize="end"
                 android:layout_toLeftOf="@+id/navigationNextItemImageView"
                 android:layout_toStartOf="@+id/navigationNextItemImageView" />
+        </RelativeLayout>
 
-</RelativeLayout>
+
+
+</com.balysv.materialripple.MaterialRippleLayout>
