--- a/app/src/main/res/layout/navigation_row_extras.xml
+++ b/app/src/main/res/layout/navigation_row_extras.xml
@@ -1,27 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.balysv.materialripple.MaterialRippleLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:rippleOverlay="true"
+    app:rippleColor="@color/grey_500"
+    app:rippleAlpha="0.2"
+    app:rippleHover="true"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="#f3f3f3">
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/iconImageView"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="16dp"
-        android:scaleType="fitCenter"/>
-
-    <TextView
-        android:id="@+id/titleTextView"
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="55dp"
-        android:textSize="14sp"
-        android:textColor="#707070"
-        android:paddingBottom="20dp"
-        android:text="Placeholder"/>
+        android:background="#f3f3f3">
+        <ImageView
+            android:id="@+id/iconImageView"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="16dp"
+            android:scaleType="fitCenter"/>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="55dp"
+            android:textSize="14sp"
+            android:textColor="#707070"
+            android:paddingBottom="20dp"
+            android:text="Placeholder"/>
+    </RelativeLayout>
+
+</com.balysv.materialripple.MaterialRippleLayout>
