--- a/app/src/main/res/layout/navigation_row_normal.xml
+++ b/app/src/main/res/layout/navigation_row_normal.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.balysv.materialripple.MaterialRippleLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:rippleOverlay="false"
+    app:rippleColor="@color/grey_400"
+    app:rippleAlpha="0.2"
+    app:rippleHover="true"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="#fcfcfc">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -21,6 +26,6 @@
             android:textSize="16sp"
             android:text="Placeholder"/>
 
-        </LinearLayout>
+    </LinearLayout>
 
-</RelativeLayout>
+</com.balysv.materialripple.MaterialRippleLayout>
