--- a/app/src/main/res/layout/messages_main.xml
+++ b/app/src/main/res/layout/messages_main.xml
@@ -3,13 +3,13 @@
 <android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ptr_layout"
-    android:background="@color/grey_white_1000"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/itemsListView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_height="fill_parent"
+        android:background="#fff" />
 
 </android.support.v4.widget.SwipeRefreshLayout>
